<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed"
            android:justificationMode="inter_word"
            android:text="@string/energi_potensial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/massaBenda_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/massaBenda_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/massa_benda"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/percepatanGravitasi_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/massaBenda_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/percepatanGravitasi_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/percepatan_gravitasi"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tinggiBenda_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/percepatanGravitasi_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tinggiBenda_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/meter"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonEnergi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/hitung"
            app:icon="@drawable/ic_hitung"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resetButton"
            app:layout_constraintTop_toBottomOf="@+id/tinggiBenda_hint" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/red"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/reset"
            app:icon="@drawable/ic_reset"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toStartOf="@+id/buttonEnergi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tinggiBenda_hint" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEnergi" />

        <TextView
            android:id="@+id/energiPotensialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="serif-monospace"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="Ep Gravitasi : 99,99 Joule" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>